src/excalidraw/manifests/cloudflare-tunnel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cloudflared
  name: excalidraw-cloudflared-deployment
  namespace: excalidraw
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: cloudflared
  template:
    metadata:
      labels:
        pod: cloudflared
    spec:
      containers:
      - command:
        - cloudflared
        - tunnel
        # In a k8s environment, the metrics server needs to listen outside the pod it runs on.
        # The address 0.0.0.0:2000 allows any pod in the namespace.
        - --metrics
        - 0.0.0.0:2000
        - run
        args:
        - --token
        - eyJhIjoiYTQ1MDIzZjc5OTczZmIyY2Q0NDAxMjc0NTliNGMwMDciLCJ0IjoiMWUyMTQ4YjctN2MzOC00ZDQ0LTlhZTctOTQxNjc3ZTViN2VlIiwicyI6IllqVTBZbVpqTmpBdE16TmhZUzAwTnpka0xXSTFZVE10TkRWak5tSTVPVGs1TURNMCJ9
        image: cloudflare/cloudflared:latest
        name: cloudflared-deployment
        livenessProbe:
          httpGet:
            path: /ready
            port: 2000
          failureThreshold: 1
          initialDelaySeconds: 10
          periodSeconds: 10
      dnsPolicy: ClusterFirst
