src/excalidraw/manifests/deploy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: excalidraw
  name: excalidraw
  labels:
    app: excalidraw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: excalidraw
  template:
    metadata:
      labels:
        app: excalidraw
    spec:
      containers:
        - name: excalidraw
          image: excalidraw/excalidraw:latest
          ports:
            - name: http
              containerPort: 80
