src/excalidraw/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: excalidraw-service
  namespace: excalidraw
  labels:
    app: excalidraw
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: excalidraw
