src/excalidraw/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: excalidraw-ingress
  namespace: excalidraw
  annotations: 
    kubernetes.io/ingress.className: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: excalidraw.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: excalidraw-service
            port:
              number: 80
  tls:
    - hosts:
      - excalidraw.lan
      secretName: excalidraw-tls-secret
